correctComments